--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 	<body>
 	<div class="background">
-		<img src="images/regpg2.avif" class="regpg2">
+		<img src="regpg2.avif" class="regpg2">
 	</div>
 	<div class="form">
 		<div class="avatar">
-			<img src="images/avatar.png">
+			<img src="avatar.png">
 		</div>
 		<h1>
 			Register Here	
@@ -47,9 +47,9 @@
 	    			<input type="password" name="">
 	    		</div>
 	    		
-	    		<div class="about-me">
+	    		<div class="form-sign-2">
 	    			<label>About Me</label>
-	    			<input type="text" name="" class="form-sign">
+	    			<input type="textarea" name="" class="about-me">
 	    		</div>
 
 	    		<div class="button">
